added toggle functionality

--- a/index.html
+++ b/index.html
@@ -18,14 +18,17 @@
         <a href="blog.html ">Blog</a>
     </nav>
 
-    <main>
+    <main class="open">
         <a href="#" class="toggle-nav">
             <img src="./images/menu.svg" alt="">Menu
-            <section>
-                <img src="./images/plant1.jpg" alt="" srcset="./images/plant1.jpg, ./images/plant1-2x.jpg 2x">
-            </section>
         </a>
+
+        <section>
+            <img src="./images/plant1.jpg" alt="" srcset="./images/plant1.jpg, ./images/plant1-2x.jpg 2x">
+        </section>
     </main>
+
+    <script src="./assets/menu.js"></script>
 </body>
 
 </html>
