Added click/slide functionality

--- a/index.html
+++ b/index.html
@@ -24,11 +24,31 @@
         </a>
 
         <section>
-            <img src="./images/plant1.jpg" alt="" srcset="./images/plant1.jpg, ./images/plant1-2x.jpg 2x">
+
+            <div class="slides">
+                <img src="./images/plant1.jpg" alt="" srcset="./images/plant1.jpg, ./images/plant1-2x.jpg 2x">
+                <img src="./images/plant2.jpg" alt="" srcset="./images/plant2.jpg, ./images/plant2-2x.jpg 2x">
+                <img src="./images/plant3.jpg" alt="" srcset="./images/plant3.jpg, ./images/plant3-2x.jpg 2x">
+                <img src="./images/plant4.jpg" alt="" srcset="./images/plant4.jpg, ./images/plant4-2x.jpg 2x">
+                <img src="./images/plant5.jpg" alt="" srcset="./images/plant5.jpg, ./images/plant5-2x.jpg 2x">
+            </div>
+            <div class="content">
+                <h1>
+                    Plant set
+                </h1>
+                <p>
+                    This beginner plant set, containing 6 succulents, 3 cacti and 2 trees is aimed at sprucing up your apartment. It’s suitable
+                    for places with both bright and low access to sunlight. Each plant comes with it’s own perfect plant
+                    bot.
+                </p>
+                <a href="shop.html" class="button">Buy for $599</a>
+            </div>
         </section>
     </main>
 
     <script src="./assets/menu.js"></script>
+    <script src="./assets/slides.js"></script>
+
 </body>
 
 </html>
