minor tweak to menu items

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <main class="open">
         <a href="#" class="toggle-nav">
-            <img src="./images/menu.svg" alt="">Menu
+            <img src="./images/close.svg" alt="">Close
         </a>
 
         <section>
